fixed the body overflow issue v2

--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@
 /* $General tags */
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body{
